--- a/wedevus/index.html
+++ b/wedevus/index.html
@@ -17,3 +17,4 @@
 <script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>
 <script type="text/javascript" src="src/js/style.js"></script>
 </body>
+</html>
